# LockerTest

./: Dockerfile  README.md  pyproject.toml
app/data/: product_stores.csv  products.csv  stores.csv
app/db/: db.db  db.py  models.py  schemas.py
app/src/: db.db  generate_data.py  load_data.py
app/src/fastapi/: api.py  db.db
