[tool.poetry]
name = "lockertest"
version = "0.1.0"
description = ""
authors = ["pdiegolopez <p.diego.lopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
sqlalchemy = "^2.0.7"
fastapi = {extras = ["all"], version = "^0.95.0"}
requests = "^2.28.2"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
